Interpreter versión 1.1, 9na edición, adaptando