@@ -1,31 +1,38 @@
 package org.austral.edu;
 
-import ast.PrintNode;
 import exceptions.DividedByZeroException;
 import exceptions.IncompatibleOperationException;
 import exceptions.VariableDoesntExistsException;
 import org.austral.edu.Exceptions.*;
 import ast.Node;
+import org.austral.edu.Results.Input;
 import org.austral.edu.Results.Result;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
-import java.util.List;
 
-public class FunctionInterpreter implements InterpreterStrategy{
-    ArrayList<InterpreterStrategy> strategies = new ArrayList<>(List.of(new PrintInterpreter()));
+public class FunctionInterpreter implements InterpreterStrategy_2{
+    ArrayList<InterpreterStrategy_2> strategies = new ArrayList<>(Arrays.asList(new PrintInterpreter_2(), new IfInterpreter()));
 
     @Override
     public boolean validate(Node node) {
+        return (isPrint(node) || isAnIf(node));
+    }
+
+    private boolean isAnIf(Node node) {
+        return node.getType().equals("If");
+    }
+
+    private boolean isPrint(Node node) {
         return node.getType().equals("Print");
     }
 
     @Override
-    public void interpret(Node node, HashMap<String,String> types, HashMap<String,String> values, Result result) throws InterpretException, IncompatibilityException, AssignationException, NotDefinedException, DividedByZeroException, IncompatibleOperationException, VariableDoesntExistsException {
-        PrintNode n = (PrintNode) node;
-        for (InterpreterStrategy strategy: strategies) {
-            if (strategy.validate(n)){
-                strategy.interpret(n,types,values,result);
+    public void interpret(Node node, HashMap<String,String> types, HashMap<String,String> values, ArrayList<String> constants, Result result, Input input) throws InterpretException, IncompatibilityException, AssignationException, NotDefinedException, ConstantVariableException, IllogicalConditionalException, DividedByZeroException, IncompatibleOperationException, VariableDoesntExistsException {
+        for (InterpreterStrategy_2 strategy: strategies) {
+            if (strategy.validate(node)){
+                strategy.interpret(node,types,values, constants, result, input);
                 break;
             }
         }
